--- a/samples/node/web/koa/hello-koa/package.json
+++ b/samples/node/web/koa/hello-koa/package.json
@@ -17,6 +17,6 @@
         "url": "https://github.com/michaelliao/learn-javascript.git"
     },
     "dependencies": {
-        "koa": "2.0.0"
+        "koa": "^2.0.0"
     }
 }
