--- a/samples/node/web/koa/url2-koa/package.json
+++ b/samples/node/web/koa/url2-koa/package.json
@@ -17,8 +17,8 @@
         "url": "https://github.com/michaelliao/learn-javascript.git"
     },
     "dependencies": {
-        "koa": "2.0.0",
-        "koa-bodyparser": "3.2.0",
-        "koa-router": "7.0.0"
+        "koa": "^2.0.0",
+        "koa-bodyparser": "^4.2.0",
+        "koa-router": "^7.0.0"
     }
 }
