--- a/samples/node/web/koa/use-nunjucks/package.json
+++ b/samples/node/web/koa/use-nunjucks/package.json
@@ -17,6 +17,6 @@
         "url": "https://github.com/michaelliao/learn-javascript.git"
     },
     "dependencies": {
-        "nunjucks": "2.4.2"
+        "nunjucks": "^3.0.0"
     }
 }
