--- a/samples/node/web/koa/use-nunjucks/package.json
+++ b/samples/node/web/koa/use-nunjucks/package.json
@@ -4,7 +4,7 @@
     "description": "Test nunjucks",
     "main": "app.js",
     "scripts": {
-        "start": "node app.js"
+        "start": "node --use_strict app.js"
     },
     "keywords": [
         "nunjucks",
